--- a/my_list.html
+++ b/my_list.html
@@ -5,6 +5,8 @@
   <title></title>
 </head>
 <body>
+  <h1>My Music List</h1>
+  <p>Some of my favorite post-punk and Goth songs!</p>
   <ul>
     <li>"Love Will Tear Us Apart"</li>
     <li>"Bela Lugosi's Dead"</li>
