--- a/my_list.html
+++ b/my_list.html
@@ -4,6 +4,7 @@
   <li>"Beyoncé"</li>
   <li>"Kelly"</li>
   <li>"Michelle"</li>
+  <li>"LeToya</li>
   <li>"LaTavia"</li>
   <li>"Farrah"</li>
 </ul>
